--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lesson-4",
+  "name": "coca",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -15,6 +15,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.1.0",
     "prettier": "^3.2.5",
+    "sass": "^1.76.0",
     "stylelint": "^16.4.0",
     "stylelint-config-standard-scss": "^13.1.0",
     "stylelint-order": "^6.0.4",
