--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vite-plugin-minify": "^1.5.2"
   },
   "dependencies": {
+    "intl-tel-input": "^23.0.12",
     "normalize.css": "^8.0.1",
     "swiper": "^11.1.3"
   }
